--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -33,7 +33,7 @@
         </header>
 
         <main>
-            <form action="/save-classes" id="create-class" method="POST">
+            <form action="/save-class" id="create-class" method="POST">
                 <fieldset>
                     <legend>Seus dados</legend>
 
