--- a/src/views/study.html
+++ b/src/views/study.html
@@ -62,7 +62,7 @@
 
         <main>
 
-            {% if proffys == "" %}
+            {% if proffys == "" and filters.filtred %}
                 <p class="no-results">Nenhum professor encontrado com a sua pesquisa.</p>
 
             {% else %}
